--- a/TODO_22_12_25.md
+++ b/TODO_22_12_25.md
@@ -5,3 +5,6 @@
 - Hacer el marquee continuo (duplicar la tira de logos o ajustar cantidad dinamica).
 - Anadir fallback si `navigator.clipboard` no esta disponible (contexto no seguro / file://).
 - Robustecer la deteccion de pagina (data-attr en body en vez de depender del titulo).
+
+## 27-12-25
+- Revisar boton "Copiar JSON" del formatter: agregar fallback y mejor feedback cuando falle.
