limpiado marquee y trocitos de codigo

--- a/TODO_22_12_25.md
+++ b/TODO_22_12_25.md
@@ -2,9 +2,11 @@
 
 - Definir si el formatter debe priorizar el guardado local o permitir recargar desde el repo (boton o clear storage).
 - Forzar no-cache al cargar `data.json` en paginas internas para evitar contenido viejo.
-- Hacer el marquee continuo (duplicar la tira de logos o ajustar cantidad dinamica).
 - Anadir fallback si `navigator.clipboard` no esta disponible (contexto no seguro / file://).
 - Robustecer la deteccion de pagina (data-attr en body en vez de depender del titulo).
 
 ## 27-12-25
 - Revisar boton "Copiar JSON" del formatter: agregar fallback y mejor feedback cuando falle.
+
+## 29-12-25
+- Eliminar las fuentes no usadas, y cargar solo la(s) que realmente usas via <link> en cada HTML.
